2013-01-10  Zan Dobersek  <zandobersek@gmail.com>

        Remove the ENABLE_ANIMATION_API feature define occurences
        https://bugs.webkit.org/show_bug.cgi?id=106544

        Reviewed by Simon Fraser.

        The Animation API code was removed in r137243. The ENABLE_ANIMATION_API
        feature define handling still lingers in various build systems and configurations
        but is of no use, so it should be removed.

        * Configurations/FeatureDefines.xcconfig:

2013-01-10  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL][WK2] Contents gets blurry when page is scrolled down
        https://bugs.webkit.org/show_bug.cgi?id=106545

        Reviewed by Kenneth Rohde Christiansen.

        The bound values for scrolling also should be pixel aligned, otherwise
        it leads to page contents blurriness when the page is scrolled down.

        * UIProcess/PageViewportController.cpp:
        (WebKit::PageViewportController::pageDidRequestScroll):

2013-01-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add support for loading web process extensions
        https://bugs.webkit.org/show_bug.cgi?id=105631

        Reviewed by Gustavo Noronha Silva.

        * GNUmakefile.am: Link to libWebCoreDOM.la and build injected
        bundle lib.
        * GNUmakefile.list.am: Add new files to compilation.
        * UIProcess/API/gtk/WebKitWebContext.cpp:
        (injectedBundleDirectory): Helper funtion to get the injected
        bundle directory.
        (injectedBundleFilename): Helper funtion to get the injected undle
        library full path.
        (createDefaultWebContext): Create the WebContext with an injected
        bundle path.
        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkit_web_view_get_page_id): Return the identifier of the web
        page associated to the web view.
        * UIProcess/API/gtk/WebKitWebView.h:
        * UIProcess/API/gtk/docs/webkit2gtk-docs.sgml: Add new chapter for