@@ -37,7 +37,6 @@
 #import "PDFLayerControllerDetails.h"
 #import "PDFPluginAnnotation.h"
 #import "PluginView.h"
-#import "ShareableBitmap.h"
 #import "WebContextMessages.h"
 #import "WebEvent.h"
 #import "WebEventConversion.h"
@@ -46,28 +45,18 @@
 #import "WebProcess.h"
 #import <PDFKit/PDFKit.h>
 #import <QuartzCore/QuartzCore.h>
-#import <WebCore/ArchiveResource.h>
-#import <WebCore/CSSPrimitiveValue.h>
-#import <WebCore/CSSPropertyNames.h>
-#import <WebCore/Chrome.h>
-#import <WebCore/DocumentLoader.h>
 #import <WebCore/FocusController.h>
 #import <WebCore/FormState.h>
 #import <WebCore/Frame.h>
-#import <WebCore/FrameLoadRequest.h>
 #import <WebCore/FrameView.h>
 #import <WebCore/GraphicsContext.h>
 #import <WebCore/HTMLElement.h>
 #import <WebCore/HTMLFormElement.h>
-#import <WebCore/HTTPHeaderMap.h>
 #import <WebCore/LocalizedStrings.h>
 #import <WebCore/MouseEvent.h>
 #import <WebCore/Page.h>
 #import <WebCore/Pasteboard.h>
-#import <WebCore/PluginData.h>
 #import <WebCore/PluginDocument.h>
-#import <WebCore/RenderBoxModelObject.h>
-#import <WebCore/ScrollAnimator.h>
 #import <WebCore/ScrollbarTheme.h>
 #import <WebCore/UUID.h>
 #import <WebKitSystemInterface.h>
